# GeometricScene

./: .txt
GeometricScene/: CMakeLists.txt  GeometricScene.cpp  GeometricScene.hpp  LengthSumVisitor.cpp  LengthSumVisitor.hpp  RunDemo.cpp  RunDemo.hpp  SceneElement.cpp  SceneElement.hpp  Shape.cpp  Shape.hpp  main.cpp
GeometricScene.xcodeproj/: project.pbxproj
GeometricScene.xcodeproj/xcuserdata/andrey.xcuserdatad/xcschemes/: xcschememanagement.plist
